# scrapy-log-analyzer

./: .pre-commit-config.yaml  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: changelog.rst  conf.py
scrapyloganalyzer/: __init__.py
tests/: test_scrapy_log_file.py
